@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Update DataCash tests and format merchant reference number to meet DataCash's requirements [MoneySpyder, cody]
+#
 # * Add Datacash gateway [MoneySpyder, cody]
 #
 # * VERIFY_PEER on all SSL requests [cody]
